--- a/py_notebooks/11_epl_home_advantage_covid.ipynb
+++ b/py_notebooks/11_epl_home_advantage_covid.ipynb
@@ -11,16 +11,17 @@
     "\n",
     "### Question of interest\n",
     "\n",
-    "It is a common refrain that home teams enjoy an advantage over their\n",
-    "away team opponents.\n",
-    "In this analysis, we test if there is such a thing as a *home\n",
-    "team advantage* by testing if the proportion of games won by the home\n",
-    "team in the 17/18, 18/19, and 20/21 EPL seasons was greater than a\n",
-    "third, the expected result if there was no home advantage.\n",
+    "The coronavirus panademic meant that all game in the English Premier\n",
+    "League we played in front of empty stadiums.\n",
+    "It is claimed that this resulted in a diminishing of the home team\n",
+    "advantage.\n",
+    "In the second analysis, we test if the proportion of home team wins\n",
+    "in the 17/18 and 18/19 seasons (*pre-COVID*) was equal to that of the\n",
+    "20/21 season (*post-COVID*).\n",
     "\n",
     "### Data\n",
     "\n",
-    "- Data comprised of the full results for the 17/18, 18/19, and 20/21\n",
+    "- Data comprised of the full results for the 18/18, 18/19, and 20/21\n",
     "  seasons\n",
     "- Data fields\n",
     "  - **game_id** `int` : game number, unique per season\n",
@@ -32,13 +33,16 @@
     "### Method\n",
     "\n",
     "- Data comprised on 1140 game results\n",
-    "- Identified the result of the game (home win or not)\n",
+    "- Identified the result of the game, home win or not\n",
+    "  - Calculated the goal difference (homegoals - awaygoals)\n",
+    "  - If goal difference > 0, then home win, else not home win\n",
     "- Each sample modelled by a normal approximation to the binomial\n",
-    "  - Justified by the sample sizes (`size=380`)\n",
-    "- Calculated the proportion of games won by the home team, and 95%\n",
-    "  **z**-interval for the proportion\n",
+    "  - Justified by the sample sizes (size == 380)\n",
+    "- Calcuated the proportion  won by the home team, and 95%\n",
+    "  **z**-interval for the proportion for the combined 17/18\n",
+    "  and 18/19 seasons (*pre-COVID*) and the 20/21 season (*post-COVID*)\n",
     "- Tested the hypothesis that the proportion of games won by the\n",
-    "  home team is equal to 1/3"
+    "  home team *pre-COVID* was equal to that *post-COVID*"
    ]
   },
   {
@@ -65,7 +69,6 @@
    "outputs": [],
    "source": [
     "# import packages and modules\n",
-    "from __future__ import annotations\n",
     "import statsmodels.stats.proportion as sm\n",
     "import pandas as pd\n",
     "import sys"
@@ -80,7 +83,7 @@
    "source": [
     "# import custom modules not in root\n",
     "sys.path[0] = \"..\\\\\"  # update path\n",
-    "from src import load  # noqa: E402"
+    "from src import load, describe, summarise  # noqa: E402"
    ]
   },
   {
@@ -250,8 +253,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# get goal difference\n",
+    "epl[\"goaldiff\"] = epl[\"homegoals\"] - epl[\"awaygoals\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "1628ac29",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# identify if home win or not\n",
-    "epl[\"goaldiff\"] = epl[\"homegoals\"] - epl[\"awaygoals\"]\n",
     "epl[\"homewin\"] = epl[\"goaldiff\"].apply(is_home_win)"
    ]
   },
@@ -265,8 +278,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "cb768376",
+   "execution_count": 9,
+   "id": "b407c1cc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,94 +289,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "1d651cfd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sample_descr: pd.DataFrame = pd.DataFrame(index=[\"17/18\", \"18/19\", \"20/21\"])\n",
-    "sample_tests: pd.DataFrame = pd.DataFrame(index=[\"17/18\", \"18/19\", \"20/21\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 10,
-   "id": "4ac9a2dc",
+   "id": "69c5c203",
    "metadata": {},
    "outputs": [],
    "source": [
     "# get number of home wins per sample\n",
-    "w17: int = epl.query('season == 1718')[\"homewin\"].sum()\n",
-    "w18: int = epl.query('season == 1819')[\"homewin\"].sum()\n",
-    "w20: int = epl.query('season == 2021')[\"homewin\"].sum()\n",
-    "homewins: list[int] = [w17, w18, w20]\n",
-    "sample_descr[\"homewins\"] = homewins"
+    "w_pre: int = epl.query('season == 1718 | season == 1819')[\"homewin\"].sum()\n",
+    "w_post: int = epl.query('season == 2021')[\"homewin\"].sum()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "97cc669b",
+   "id": "af18b3bf",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>homewins</th>\n",
-       "      <th>prop_est</th>\n",
-       "      <th>[0.025</th>\n",
-       "      <th>0.975]</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>17/18</th>\n",
-       "      <td>173</td>\n",
-       "      <td>0.455263</td>\n",
-       "      <td>0.405193</td>\n",
-       "      <td>0.505334</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18/19</th>\n",
-       "      <td>181</td>\n",
-       "      <td>0.476316</td>\n",
-       "      <td>0.426100</td>\n",
-       "      <td>0.526531</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20/21</th>\n",
-       "      <td>144</td>\n",
-       "      <td>0.378947</td>\n",
-       "      <td>0.330171</td>\n",
-       "      <td>0.427724</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "       homewins  prop_est    [0.025    0.975]\n",
-       "17/18       173  0.455263  0.405193  0.505334\n",
-       "18/19       181  0.476316  0.426100  0.526531\n",
-       "20/21       144  0.378947  0.330171  0.427724"
+       "Proportion(p_hat=0.465789, zconfint_prop=(0.430325, 0.501254))"
       ]
      },
      "execution_count": 11,
@@ -372,79 +317,19 @@
     }
    ],
    "source": [
-    "# get point, interval estimates for each sample\n",
-    "prop_ests: list[float] = list()\n",
-    "lower_props: list[float] = list()\n",
-    "upper_props: list[float] = list()\n",
-    "\n",
-    "for res in homewins:\n",
-    "    prop_ests.append(res/n)\n",
-    "    ci: tuple[float] = sm.proportion_confint(res, n)\n",
-    "    lower_props.append(ci[0])\n",
-    "    upper_props.append(ci[1])\n",
-    "\n",
-    "sample_descr[\"prop_est\"] = prop_ests\n",
-    "sample_descr[\"[0.025\"] = lower_props\n",
-    "sample_descr[\"0.975]\"] = upper_props\n",
-    "sample_descr"
+    "describe.Proportion(w_pre/(2*n), sm.proportion_confint(w_pre, 2*n))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "0b33a6a7",
+   "id": "7c8a14d0",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>zstats</th>\n",
-       "      <th>pvals</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>17/18</th>\n",
-       "      <td>5.042060</td>\n",
-       "      <td>2.302735e-07</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18/19</th>\n",
-       "      <td>5.912631</td>\n",
-       "      <td>1.683425e-09</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20/21</th>\n",
-       "      <td>1.886238</td>\n",
-       "      <td>2.963143e-02</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "         zstats         pvals\n",
-       "17/18  5.042060  2.302735e-07\n",
-       "18/19  5.912631  1.683425e-09\n",
-       "20/21  1.886238  2.963143e-02"
+       "Proportion(p_hat=0.378947, zconfint_prop=(0.330171, 0.427724))"
       ]
      },
      "execution_count": 12,
@@ -453,20 +338,30 @@
     }
    ],
    "source": [
+    "describe.Proportion(w_post/(n), sm.proportion_confint(w_post, n))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "c7774ae4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ResultSummary(zstat=2.810184, pval=0.004951)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "# get test results\n",
-    "p0: float = 1/3\n",
-    "zstats: list[float] = list()\n",
-    "pvals: list[float] = list()\n",
-    "\n",
-    "for res in homewins:\n",
-    "    zstat, pval = sm.proportions_ztest(\n",
-    "                    res, n, value=p0, alternative=\"larger\", prop_var=p0)\n",
-    "    zstats.append(zstat)\n",
-    "    pvals.append(pval)\n",
-    "\n",
-    "sample_tests[\"zstats\"] = zstats\n",
-    "sample_tests[\"pvals\"] = pvals\n",
-    "sample_tests"
+    "zstat, pval = sm.test_proportions_2indep(w_pre, 2*n, w_post, n)\n",
+    "summarise.PropTest(zstat, pval)"
    ]
   }
  ],
